@@ -736,6 +736,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\Python\pystrcmp.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\Python\pystrtod.c"
 				>
 			</File>
@@ -1191,6 +1195,10 @@
 			</File>
 			<File
 				RelativePath="..\..\Include\pystate.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\Include\pystrcmp.h"
 				>
 			</File>
 			<File
